# supply-chain-control-agent

./: .dockerignore  .env.exemple  .gitignore  README.md  docker-compose.yml  note.txt
agent/: README.md  db_connector.py  main.py  model.py  multi_agent.py  onboarding.py  prompt.txt  prompting.py  pyproject.toml  schema_prompt_agent.py  shipments_prompt.txt  sql_agent.py  statistic_visualiser.py  visual_prompt.txt
crontab/: generateChart.ts  log.ts  nodemon.json  package-lock.json  package.json  serveImage.ts  start.ts
frontend/: .env.example  eslint.config.js  next.config.js  package-lock.json  package.json
frontend/prisma/: dbEntreprise.json  schema.prisma
frontend/prisma/migrations/20250705115111_creation_db/: migration.sql
frontend/prisma/migrations/20250705121712_added_message_and_response_table/: migration.sql
frontend/prisma/migrations/20250706120244_added_audio_table/: migration.sql
frontend/prisma/migrations/20250706125826_make_message_optional/: migration.sql
frontend/src/: env.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/Log/: page.tsx
frontend/src/app/OnBoarding/: page.tsx  temp.json
frontend/src/app/_components/: CSVFormModal.tsx  FormatLogs.tsx  Header.tsx  animated-message.tsx  audioRecorder.tsx  csv-uploader.tsx  message-history.tsx  prompt-editor-modal.tsx
frontend/src/app/api/mail/: route.ts
frontend/src/app/api/prompt/: prompt.txt  route.ts
frontend/src/app/audio/: page.tsx
frontend/src/server/api/: root.ts
frontend/src/server/api/routers/: agent.ts  geminit.ts  (+2 more)
frontend/src/server/auth/: config.ts
(+5 files in other folders)
