[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "matplotlib>=3.8.0",
    "numpy>=1.25.0",
    "pandas>=2.3.0",
    "plotly>=5.17.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.0",
    "smolagents[litellm,prompts,toolkit]>=1.19.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.0",
]
